# ML-Blocks

frontend/: index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: index.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: executionContext.tsx  filesystemContext.tsx  projectContext.tsx
frontend/src/hooks/: useAuth.tsx  useProject.tsx  useProjects.tsx
ipykernel-kernel-service/: .env.example  .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml
ipykernel-kernel-service/master/: __init__.py  app.py  context.py  docker_event_handler.py
ipykernel-kernel-service/master/controller/: kernel_container_controller.py  kernel_controller.py
ipykernel-kernel-service/master/models/: kernel.py
ipykernel-kernel-service/master/repository/: kernel_repository.py
ipykernel-kernel-service/slave/: Dockerfile  requirements.txt  run.sh
ipykernel-kernel-service/slave/app/: code_generator.py  graph_processor.py  kernel.py  preprocessing.py  server.py
project-service/: .gitignore  docker-compose.yml  pyproject.toml
project-service/app/: application_context.py  main.py
project-service/app/controller/: __init__.py  kernel_controller.py  tunnel_controller.py
project-service/app/model/: kernel_event.py  project_model.py
project-service/app/repository/: __init__.py  project_repository.py
project-service/app/repository/impl/: mongo_project_repository.py
project-service/app/service/: __init__.py  kernel_service.py
project-service/app/service/impl/: rest_kernel_service.py
(+33 files in other folders)
